--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/multer": "^2.0.0",
+    "bcryptjs": "^3.0.2",
     "bullmq": "^5.61.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
